implement changing of the text(change title name)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Dima's</title>
 </head>
 <body>
-<div class="anim">Hello!</div>
+<div id="myDiv" class="anim">Hello!</div>
 <script src="app.js"></script>
 </body>
 </html>
